{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 2444,
  "lineage": "70fc8966-4c6d-7651-0b57-261760b463bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bce-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/08e20468d9f7f5c9",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/18aa0c00-55b3-4f07-81fe-19b7e15291e0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Applicaton-TG/7d209282350b217c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/08e20468d9f7f5c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bce-app-alb/c6092919971bb20b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bce-app-alb",
            "aws_lb_target_group.DEV-BCE-APP-TG",
            "aws_s3_bucket.dev-bce-logs",
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bce-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/7ce79a284afaae0d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Applicaton-TG/7d209282350b217c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/7ce79a284afaae0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bce-app-alb/c6092919971bb20b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bce-app-alb",
            "aws_lb_target_group.DEV-BCE-APP-TG",
            "aws_s3_bucket.dev-bce-logs",
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bce-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/b0adac34bd997058",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Mapping-TG/78a9bdcd39c65060",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/b0adac34bd997058",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bce-app-alb/c6092919971bb20b",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bce-app-alb",
            "aws_lb_target_group.DEV-BCE-MAP-TG",
            "aws_s3_bucket.dev-bce-logs",
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bcs-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/a6459188f0df9531",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/18aa0c00-55b3-4f07-81fe-19b7e15291e0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Applicaton-TG/82a784d0ddd0a61b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/a6459188f0df9531",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcs-app-alb/84aeb6fb960630c8",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcs-app-alb",
            "aws_lb_target_group.DEV-BCS-APP-TG",
            "aws_s3_bucket.dev-bcs-logs",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bcs-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/3f14d0151a28f0c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Applicaton-TG/82a784d0ddd0a61b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/3f14d0151a28f0c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcs-app-alb/84aeb6fb960630c8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcs-app-alb",
            "aws_lb_target_group.DEV-BCS-APP-TG",
            "aws_s3_bucket.dev-bcs-logs",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bcs-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/86d6f2b388026cd5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Mapping-TG/cc3aa953d161ba5c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/86d6f2b388026cd5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcs-app-alb/84aeb6fb960630c8",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcs-app-alb",
            "aws_lb_target_group.DEV-BCS-MAP-TG",
            "aws_s3_bucket.dev-bcs-logs",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bcw-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/82b6cace882c4b46",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/18aa0c00-55b3-4f07-81fe-19b7e15291e0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Applicaton-TG/c524baf5b4ac9b2a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/82b6cace882c4b46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcw-app-alb/104124d6380f3e24",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcw-app-alb",
            "aws_lb_target_group.DEV-BCW-APP-TG",
            "aws_s3_bucket.dev-bcw-logs",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bcw-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/95388699c59dbac9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Applicaton-TG/c524baf5b4ac9b2a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/95388699c59dbac9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcw-app-alb/104124d6380f3e24",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcw-app-alb",
            "aws_lb_target_group.DEV-BCW-APP-TG",
            "aws_s3_bucket.dev-bcw-logs",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-bcw-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/302ccdb291cd93e0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Mapping-TG/02a882ebc7b80477",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/302ccdb291cd93e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcw-app-alb/104124d6380f3e24",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcw-app-alb",
            "aws_lb_target_group.DEV-BCW-MAP-TG",
            "aws_s3_bucket.dev-bcw-logs",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-cffg-app-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/4b280816a4c820a0",
            "certificate_arn": "arn:aws:acm:eu-west-2:975971611990:certificate/18aa0c00-55b3-4f07-81fe-19b7e15291e0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Applicaton-TG/54abf1bd3c464554",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/4b280816a4c820a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-cffg-app-alb/2ec9cfa454157f3d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-cffg-app-alb",
            "aws_lb_target_group.DEV-CFFG-APP-TG",
            "aws_s3_bucket.dev-cffg-logs",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-cffg-app-alb-listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/3b8fced5716c9ddd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Applicaton-TG/54abf1bd3c464554",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/3b8fced5716c9ddd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-cffg-app-alb/2ec9cfa454157f3d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-cffg-app-alb",
            "aws_lb_target_group.DEV-CFFG-APP-TG",
            "aws_s3_bucket.dev-cffg-logs",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-cffg-map-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/eb7d5ed48554cfa6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Mapping-TG/61fd509757385bf6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/eb7d5ed48554cfa6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-cffg-app-alb/2ec9cfa454157f3d",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_lb.dev-cffg-app-alb",
            "aws_lb_target_group.DEV-CFFG-MAP-TG",
            "aws_s3_bucket.dev-cffg-logs",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-bce-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Mapping-TG/78a9bdcd39c65060",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bce-app-alb/c6092919971bb20b/08e20468d9f7f5c9/31bfac51caa9561f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCE/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bce-app-alb/c6092919971bb20b/08e20468d9f7f5c9/31bfac51caa9561f",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/08e20468d9f7f5c9",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-bce-app-alb-listener",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bce-app-alb",
            "aws_lb_target_group.DEV-BCE-APP-TG",
            "aws_lb_target_group.DEV-BCE-MAP-TG",
            "aws_s3_bucket.dev-bce-logs",
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-bce-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Mapping-TG/78a9bdcd39c65060",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bce-app-alb/c6092919971bb20b/7ce79a284afaae0d/2769b15e7409e86c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCE/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bce-app-alb/c6092919971bb20b/7ce79a284afaae0d/2769b15e7409e86c",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bce-app-alb/c6092919971bb20b/7ce79a284afaae0d",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-bce-app-alb-listener80",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bce-app-alb",
            "aws_lb_target_group.DEV-BCE-APP-TG",
            "aws_lb_target_group.DEV-BCE-MAP-TG",
            "aws_s3_bucket.dev-bce-logs",
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-bcs-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Mapping-TG/cc3aa953d161ba5c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcs-app-alb/84aeb6fb960630c8/a6459188f0df9531/88d600d10701d052",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCS/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcs-app-alb/84aeb6fb960630c8/a6459188f0df9531/88d600d10701d052",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/a6459188f0df9531",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-bcs-app-alb-listener",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcs-app-alb",
            "aws_lb_target_group.DEV-BCS-APP-TG",
            "aws_lb_target_group.DEV-BCS-MAP-TG",
            "aws_s3_bucket.dev-bcs-logs",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-bcs-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Mapping-TG/cc3aa953d161ba5c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcs-app-alb/84aeb6fb960630c8/3f14d0151a28f0c7/425d53b985ed65e7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCS/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcs-app-alb/84aeb6fb960630c8/3f14d0151a28f0c7/425d53b985ed65e7",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcs-app-alb/84aeb6fb960630c8/3f14d0151a28f0c7",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-bcs-app-alb-listener80",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcs-app-alb",
            "aws_lb_target_group.DEV-BCS-APP-TG",
            "aws_lb_target_group.DEV-BCS-MAP-TG",
            "aws_s3_bucket.dev-bcs-logs",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-bcw-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Mapping-TG/02a882ebc7b80477",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcw-app-alb/104124d6380f3e24/82b6cace882c4b46/e7d2413b9d9b364b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCW/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcw-app-alb/104124d6380f3e24/82b6cace882c4b46/e7d2413b9d9b364b",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/82b6cace882c4b46",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-bcw-app-alb-listener",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcw-app-alb",
            "aws_lb_target_group.DEV-BCW-APP-TG",
            "aws_lb_target_group.DEV-BCW-MAP-TG",
            "aws_s3_bucket.dev-bcw-logs",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-bcw-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Mapping-TG/02a882ebc7b80477",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcw-app-alb/104124d6380f3e24/95388699c59dbac9/56ce24bc05bd4628",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/BCW/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-bcw-app-alb/104124d6380f3e24/95388699c59dbac9/56ce24bc05bd4628",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-bcw-app-alb/104124d6380f3e24/95388699c59dbac9",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-bcw-app-alb-listener80",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-bcw-app-alb",
            "aws_lb_target_group.DEV-BCW-APP-TG",
            "aws_lb_target_group.DEV-BCW-MAP-TG",
            "aws_s3_bucket.dev-bcw-logs",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-cffg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Mapping-TG/61fd509757385bf6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-cffg-app-alb/2ec9cfa454157f3d/4b280816a4c820a0/28675372561cc9a6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/CFFG/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-cffg-app-alb/2ec9cfa454157f3d/4b280816a4c820a0/28675372561cc9a6",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/4b280816a4c820a0",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-cffg-app-alb-listener",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-cffg-app-alb",
            "aws_lb_target_group.DEV-CFFG-APP-TG",
            "aws_lb_target_group.DEV-CFFG-MAP-TG",
            "aws_s3_bucket.dev-cffg-logs",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dev-map-cffg-rule80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Mapping-TG/61fd509757385bf6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-cffg-app-alb/2ec9cfa454157f3d/3b8fced5716c9ddd/dde16bea352382d4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/geoserver/CFFG/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener-rule/app/dev-cffg-app-alb/2ec9cfa454157f3d/3b8fced5716c9ddd/dde16bea352382d4",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:listener/app/dev-cffg-app-alb/2ec9cfa454157f3d/3b8fced5716c9ddd",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_listener.dev-cffg-app-alb-listener80",
            "aws_kms_key.dev-kms",
            "aws_lb.dev-cffg-app-alb",
            "aws_lb_target_group.DEV-CFFG-APP-TG",
            "aws_lb_target_group.DEV-CFFG-MAP-TG",
            "aws_s3_bucket.dev-cffg-logs",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa543436aa8110d5",
            "association_id": "eipassoc-075653106e89fb836",
            "domain": "vpc",
            "id": "eipalloc-0aa543436aa8110d5",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0068e41bf4db3fec4",
            "private_dns": "ip-10-0-0-92.eu-west-2.compute.internal",
            "private_ip": "10.0.0.92",
            "public_dns": "ec2-18-135-241-92.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.241.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DEV-EIP1"
            },
            "tags_all": {
              "Name": "DEV-EIP1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1a57d46d982402e",
            "association_id": "eipassoc-0362a864d0cc8539f",
            "domain": "vpc",
            "id": "eipalloc-0b1a57d46d982402e",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0383563e6d058d3cf",
            "private_dns": "ip-10-0-2-203.eu-west-2.compute.internal",
            "private_ip": "10.0.2.203",
            "public_dns": "ec2-18-168-175-190.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.175.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DEV-EIP2"
            },
            "tags_all": {
              "Name": "DEV-EIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DEV-EC2-BAST",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f78ae2fae25a1310",
            "arn": "arn:aws:ec2:eu-west-2:975971611990:instance/i-0c4e175342b6549f1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-ec2-cloudwatch",
            "id": "i-0c4e175342b6549f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CO-BCP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-03d8bf89813005320",
            "private_dns": "ip-10-0-0-194.eu-west-2.compute.internal",
            "private_ip": "10.0.0.194",
            "public_dns": "ec2-13-40-129-12.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.129.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-2:975971611990:key/9140cbb3-2afd-4221-9c3f-ce5ba6c56f7d",
                "throughput": 0,
                "volume_id": "vol-0b8d45c369393618e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00194a2823e26894f",
            "tags": {
              "Name": "DEV-EC2-BASTION1"
            },
            "tags_all": {
              "Name": "DEV-EC2-BASTION1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a7d66e8b7a496e86"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.dev-ec2-cloudwatch",
            "aws_security_group.allow_ssh",
            "aws_subnet.dev-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:internet-gateway/igw-0a1fa1117c4eed15f",
            "id": "igw-0a1fa1117c4eed15f",
            "owner_id": "975971611990",
            "tags": {
              "Name": "DEV-IGW"
            },
            "tags_all": {
              "Name": "DEV-IGW"
            },
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev-bce-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-bce-logs",
                "enabled": true,
                "prefix": "devbce"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bce-app-alb/c6092919971bb20b",
            "arn_suffix": "app/dev-bce-app-alb/c6092919971bb20b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-bce-app-alb-1375920002.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bce-app-alb/c6092919971bb20b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-bce-app-alb",
            "security_groups": [
              "sg-01cbe5a119b4fdcab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00194a2823e26894f"
              },
              {
                "subnet_id": "subnet-02a2def3c00f0fbbc"
              }
            ],
            "subnets": [
              "subnet-00194a2823e26894f",
              "subnet-02a2def3c00f0fbbc"
            ],
            "vpc_id": "vpc-09d56518e2d4026fc",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_s3_bucket.dev-bce-logs",
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev-bcs-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-bcs-logs",
                "enabled": true,
                "prefix": "devbcs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcs-app-alb/84aeb6fb960630c8",
            "arn_suffix": "app/dev-bcs-app-alb/84aeb6fb960630c8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-bcs-app-alb-74268921.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcs-app-alb/84aeb6fb960630c8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-bcs-app-alb",
            "security_groups": [
              "sg-06da26103b9c67052"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00194a2823e26894f"
              },
              {
                "subnet_id": "subnet-02a2def3c00f0fbbc"
              }
            ],
            "subnets": [
              "subnet-00194a2823e26894f",
              "subnet-02a2def3c00f0fbbc"
            ],
            "vpc_id": "vpc-09d56518e2d4026fc",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_s3_bucket.dev-bcs-logs",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev-bcw-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-bcw-logs",
                "enabled": true,
                "prefix": "devbcw"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcw-app-alb/104124d6380f3e24",
            "arn_suffix": "app/dev-bcw-app-alb/104124d6380f3e24",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-bcw-app-alb-1629513142.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-bcw-app-alb/104124d6380f3e24",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-bcw-app-alb",
            "security_groups": [
              "sg-06790a4a4140bedc0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00194a2823e26894f"
              },
              {
                "subnet_id": "subnet-02a2def3c00f0fbbc"
              }
            ],
            "subnets": [
              "subnet-00194a2823e26894f",
              "subnet-02a2def3c00f0fbbc"
            ],
            "vpc_id": "vpc-09d56518e2d4026fc",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_s3_bucket.dev-bcw-logs",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev-cffg-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-cffg-logs",
                "enabled": true,
                "prefix": "devcffg"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-cffg-app-alb/2ec9cfa454157f3d",
            "arn_suffix": "app/dev-cffg-app-alb/2ec9cfa454157f3d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-cffg-app-alb-1707008166.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:loadbalancer/app/dev-cffg-app-alb/2ec9cfa454157f3d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-cffg-app-alb",
            "security_groups": [
              "sg-030b5e4ea821387c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00194a2823e26894f"
              },
              {
                "subnet_id": "subnet-02a2def3c00f0fbbc"
              }
            ],
            "subnets": [
              "subnet-00194a2823e26894f",
              "subnet-02a2def3c00f0fbbc"
            ],
            "vpc_id": "vpc-09d56518e2d4026fc",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_kms_key.dev-kms",
            "aws_s3_bucket.dev-cffg-logs",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default",
            "data.aws_canonical_user_id.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-BCE-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Applicaton-TG/7d209282350b217c",
            "arn_suffix": "targetgroup/DEV-BCE-Applicaton-TG/7d209282350b217c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Applicaton-TG/7d209282350b217c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-BCE-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-BCE-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Mapping-TG/78a9bdcd39c65060",
            "arn_suffix": "targetgroup/DEV-BCE-Mapping-TG/78a9bdcd39c65060",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCE-Mapping-TG/78a9bdcd39c65060",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-BCE-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-BCS-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Applicaton-TG/82a784d0ddd0a61b",
            "arn_suffix": "targetgroup/DEV-BCS-Applicaton-TG/82a784d0ddd0a61b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Applicaton-TG/82a784d0ddd0a61b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-BCS-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-BCS-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Mapping-TG/cc3aa953d161ba5c",
            "arn_suffix": "targetgroup/DEV-BCS-Mapping-TG/cc3aa953d161ba5c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCS-Mapping-TG/cc3aa953d161ba5c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-BCS-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-BCW-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Applicaton-TG/c524baf5b4ac9b2a",
            "arn_suffix": "targetgroup/DEV-BCW-Applicaton-TG/c524baf5b4ac9b2a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Applicaton-TG/c524baf5b4ac9b2a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-BCW-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-BCW-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Mapping-TG/02a882ebc7b80477",
            "arn_suffix": "targetgroup/DEV-BCW-Mapping-TG/02a882ebc7b80477",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-BCW-Mapping-TG/02a882ebc7b80477",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-BCW-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-CFFG-APP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Applicaton-TG/54abf1bd3c464554",
            "arn_suffix": "targetgroup/DEV-CFFG-Applicaton-TG/54abf1bd3c464554",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Applicaton-TG/54abf1bd3c464554",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-CFFG-Applicaton-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "DEV-CFFG-MAP-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Mapping-TG/61fd509757385bf6",
            "arn_suffix": "targetgroup/DEV-CFFG-Mapping-TG/61fd509757385bf6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/geoserver/web/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975971611990:targetgroup/DEV-CFFG-Mapping-TG/61fd509757385bf6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-CFFG-Mapping-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa543436aa8110d5",
            "connectivity_type": "public",
            "id": "nat-04ee51d63ebae6415",
            "network_interface_id": "eni-0068e41bf4db3fec4",
            "private_ip": "10.0.0.92",
            "public_ip": "18.135.241.92",
            "subnet_id": "subnet-00194a2823e26894f",
            "tags": {
              "Name": "DEV-NAT1"
            },
            "tags_all": {
              "Name": "DEV-NAT1"
            }
          },
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_internet_gateway.dev-default",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1a57d46d982402e",
            "connectivity_type": "public",
            "id": "nat-002c5d2631147a488",
            "network_interface_id": "eni-0383563e6d058d3cf",
            "private_ip": "10.0.2.203",
            "public_ip": "18.168.175.190",
            "subnet_id": "subnet-02a2def3c00f0fbbc",
            "tags": {
              "Name": "DEV-NAT2"
            },
            "tags_all": {
              "Name": "DEV-NAT2"
            }
          },
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_internet_gateway.dev-default",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b227a8a0dfb446c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04ee51d63ebae6415",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b227a8a0dfb446c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_internet_gateway.dev-default",
            "aws_nat_gateway.dev-default",
            "aws_route_table.dev-private",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e2f517e12bc98e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-002c5d2631147a488",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e2f517e12bc98e0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev-eip",
            "aws_internet_gateway.dev-default",
            "aws_nat_gateway.dev-default",
            "aws_route_table.dev-private",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a1fa1117c4eed15f",
            "id": "r-rtb-04d6b8d8660a427eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d6b8d8660a427eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-default",
            "aws_route_table.dev-public",
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:route-table/rtb-03b227a8a0dfb446c",
            "id": "rtb-03b227a8a0dfb446c",
            "owner_id": "975971611990",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ee51d63ebae6415",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-PRIVATE-RT"
            },
            "tags_all": {
              "Name": "DEV-PRIVATE-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:route-table/rtb-01e2f517e12bc98e0",
            "id": "rtb-01e2f517e12bc98e0",
            "owner_id": "975971611990",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002c5d2631147a488",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-PRIVATE-RT"
            },
            "tags_all": {
              "Name": "DEV-PRIVATE-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:route-table/rtb-04d6b8d8660a427eb",
            "id": "rtb-04d6b8d8660a427eb",
            "owner_id": "975971611990",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1fa1117c4eed15f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-PUBLIC_RT"
            },
            "tags_all": {
              "Name": "DEV-PUBLIC_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0992ba0d707db478f",
            "route_table_id": "rtb-03b227a8a0dfb446c",
            "subnet_id": "subnet-081548483804b6631"
          },
          "dependencies": [
            "aws_route_table.dev-private",
            "aws_subnet.dev-private",
            "aws_vpc.dev-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006f4cfcd29819e14",
            "route_table_id": "rtb-01e2f517e12bc98e0",
            "subnet_id": "subnet-015bd8a6cf56a58a1"
          },
          "dependencies": [
            "aws_route_table.dev-private",
            "aws_subnet.dev-private",
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d5aa43886b4dde6",
            "route_table_id": "rtb-04d6b8d8660a427eb",
            "subnet_id": "subnet-00194a2823e26894f"
          },
          "dependencies": [
            "aws_route_table.dev-public",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db12b4d0cf90731c",
            "route_table_id": "rtb-04d6b8d8660a427eb",
            "subnet_id": "subnet-02a2def3c00f0fbbc"
          },
          "dependencies": [
            "aws_route_table.dev-public",
            "aws_subnet.dev-public",
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEV-BCE-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-01cbe5a119b4fdcab",
            "description": "Security group for the dev BCE external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cbe5a119b4fdcab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV-BCE-EXTALB-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV BCE External ALB security Group"
            },
            "tags_all": {
              "Name": "DEV BCE External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEV-BCS-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-06da26103b9c67052",
            "description": "Security group for the dev BCS external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06da26103b9c67052",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV-BCS-EXT-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV BCS External ALB security Group"
            },
            "tags_all": {
              "Name": "DEV BCS External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEV-BCW-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-06790a4a4140bedc0",
            "description": "Security group for the dev BCW external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06790a4a4140bedc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV-BCW-EXTALB-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV BCW External ALB security Group"
            },
            "tags_all": {
              "Name": "DEV BCW External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEV-CFFG-EXTALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-030b5e4ea821387c8",
            "description": "Security group for the dev CFFG external application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030b5e4ea821387c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV-CFFG-EXTALB-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV CFFG External ALB security Group"
            },
            "tags_all": {
              "Name": "DEV CFFG External ALB security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEV-EC2-APP-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0ee6b277227f65c44",
            "description": "Security group for the dev BCE internal application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee6b277227f65c44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cbe5a119b4fdcab",
                  "sg-030b5e4ea821387c8",
                  "sg-06790a4a4140bedc0",
                  "sg-06da26103b9c67052"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7d66e8b7a496e86"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DEV-EC2-APP-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV EC2 Application security Group"
            },
            "tags_all": {
              "Name": "DEV EC2 Application security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_security_group.allow_ssh",
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEV-EC2-MAP-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0f76b072d17184b0b",
            "description": "Security group for the dev mapping server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f76b072d17184b0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "22 from bastion access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7d66e8b7a496e86"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cbe5a119b4fdcab"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030b5e4ea821387c8"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06790a4a4140bedc0"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06da26103b9c67052"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01cbe5a119b4fdcab"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030b5e4ea821387c8"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06790a4a4140bedc0"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06da26103b9c67052"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV-EC2-MAP-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV EC2 Mapping security Group"
            },
            "tags_all": {
              "Name": "DEV EC2 Mapping security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_security_group.allow_ssh",
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DEV-RDS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0ae869c4a9a2c4b81",
            "description": "Security group for the dev mapping server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae869c4a9a2c4b81",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee6b277227f65c44"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f76b072d17184b0b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DEV-RDS-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV RDS security Group"
            },
            "tags_all": {
              "Name": "DEV RDS security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DEV-BCE-EXTALB-SG",
            "aws_security_group.DEV-BCS-EXTALB-SG",
            "aws_security_group.DEV-BCW-EXTALB-SG",
            "aws_security_group.DEV-CFFG-EXTALB-SG",
            "aws_security_group.DEV-EC2-APP-SG",
            "aws_security_group.DEV-EC2-MAP-SG",
            "aws_security_group.allow_ssh",
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:security-group/sg-0a7d66e8b7a496e86",
            "description": "Security group for dev bastion server SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7d66e8b7a496e86",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "5.148.17.54/32"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "80.7.206.5/32",
                  "5.148.17.54/32"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.54.181.130/32",
                  "80.7.206.5/32",
                  "5.148.17.54/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DEV-PUBLIC-BASTION-SG",
            "name_prefix": "",
            "owner_id": "975971611990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV Bastion security Group"
            },
            "tags_all": {
              "Name": "DEV Bastion security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-081548483804b6631",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081548483804b6631",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-PRIVATE-SUB1"
            },
            "tags_all": {
              "Name": "DEV-PRIVATE-SUB1"
            },
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-015bd8a6cf56a58a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015bd8a6cf56a58a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-PRIVATE-SUB2"
            },
            "tags_all": {
              "Name": "DEV-PRIVATE-SUB2"
            },
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-00194a2823e26894f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00194a2823e26894f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-PUBLIC-SUB1"
            },
            "tags_all": {
              "Name": "DEV-PUBLIC-SUB1"
            },
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:subnet/subnet-02a2def3c00f0fbbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a2def3c00f0fbbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975971611990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-PUBLIC-SUB2"
            },
            "tags_all": {
              "Name": "DEV-PUBLIC-SUB2"
            },
            "vpc_id": "vpc-09d56518e2d4026fc"
          },
          "dependencies": [
            "aws_vpc.dev-default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975971611990:vpc/vpc-09d56518e2d4026fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ac4cc14cc9538bd",
            "default_route_table_id": "rtb-03f60f9e85963fca1",
            "default_security_group_id": "sg-033b37ae7b5d48bc4",
            "dhcp_options_id": "dopt-b2886bdb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d56518e2d4026fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f60f9e85963fca1",
            "owner_id": "975971611990",
            "tags": {
              "Name": "DEV-VPC"
            },
            "tags_all": {
              "Name": "DEV-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}